--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
-  "name": "202204-w05-carlos-nunez-javier-mora",
+  "name": "ch05",
   "version": "1.0.0",
   "type": "module",
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "jest --watchAll --coverage",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "lint-fix": "eslint . --fix"
   },
-  "author": "Carlos Nuñez y Javier Mora",
+  "author": "Javier Mora",
   "license": "ISC",
   "devDependencies": {
     "@babel/plugin-transform-modules-commonjs": "^7.17.9",
@@ -19,7 +20,8 @@
     "prettier": "^2.6.2"
   },
   "prettier": {
-    "singleQuote": true
+    "singleQuote": true,
+    "endOfLine": "lf"
   },
   "babel": {
     "env": {
